<resources>
    <string name="app_name">Assignment 2</string>
    <string name="active_journey">Active Journey</string>
    <string name="logo">Logo</string>
    <string name="add_workout">Add Workout</string>
    <string name="log_workout">Log workout</string>
    <string name="choose_workout_type">Choose Workout Type</string>
    <string name="enter_calories_burned">Enter Calories Burned</string>
    <string name="extra_description">Extra Description</string>
    <string name="preference_file_key">WORKOUT_PREFS</string>
    <string name="workout_type_placeholder">Workout Type</string>
    <string name="date_placeholder">14/6/2023</string>
    <string name="calories_placeholder">126 Kcal 🔥</string>
    <string name="description_placeholder">his class will creatively focus on exercises pertaining to your arms, butt and core. You will rethink the way you define fatigue and find new boundaries that challenge your muscular endurance and strength. This is a great compliment to what you do for cardio outside of class. All-Levels.</string>
    <string name="workout_name_placeholder">Quick Workout</string>
</resources>