<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_bg"
    tools:context=".DetailedActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/main_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/secondary_bg"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"

        android:paddingVertical="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/detailed_back_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/baseline_arrow_back_ios_24"
            android:contentDescription="@string/logo" />

        <TextView
            style="@style/text.h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/active_journey" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/detailed_title"
        style="@style/text.h1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/workout_name_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_header" />

    <TextView
        android:id="@+id/detailed_date"
        style="@style/text.h2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/date_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_title" />

    <TextView
        android:id="@+id/detailed_type"
        style="@style/text.h3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/workout_type_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_date" />

    <TextView
        android:id="@+id/detailed_desc"
        style="@style/text"
        android:textSize="18sp"
        android:textColor="@color/text_secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/description_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_type" />

    <TextView
        android:id="@+id/detailed_cals"
        style="@style/text.h3"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/calories_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_desc" />




</androidx.constraintlayout.widget.ConstraintLayout>