<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tertiary_border"
        android:padding="15dp">

        <TextView
            android:id="@+id/card_text_name"
            style="@style/text.h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workout_name_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/card_text_type"
            style="@style/text.h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workout_type_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_text_name"/>

        <TextView
            android:id="@+id/card_text_date"
            style="@style/text.h3"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_text_type" />


        <TextView
            android:id="@+id/card_text_calories"
            style="@style/text.h3"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/calories_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/card_text_name"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>