<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_bg"

    tools:context=".AddWorkoutActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/add_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_bg"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"

        android:paddingVertical="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:background="@drawable/logo"
            android:contentDescription="@string/logo" />

        <TextView
            style="@style/text.h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/log_workout" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"

        android:paddingVertical="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_header">

        <TextView
            android:id="@+id/add_name_form"
            style="@style/text.form_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Name Your Workout"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/add_edit_name"
            style="@style/text.form_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="number"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_name_form" />


        <TextView
            android:id="@+id/add_type_form"
            style="@style/text.form_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_workout_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_edit_calories" />

        <Spinner
            android:id="@+id/add_spinner_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/body_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_type_form" />

        <TextView
            android:id="@+id/add_calories_form"
            style="@style/text.form_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/enter_calories_burned"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_edit_name" />

        <EditText
            android:id="@+id/add_edit_calories"
            style="@style/text.form_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="number"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_calories_form" />

        <TextView
            android:id="@+id/add_extra_text_form"
            style="@style/text.form_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/extra_description"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_spinner_type" />

        <EditText
            android:id="@+id/add_edit_extra"
            style="@style/text.form_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="4"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_extra_text_form" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/button.primary"
        android:id="@+id/add_button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_workout"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>